# MoleculeVR

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp
app/src/main/include/glm/: common.hpp  matrix.hpp  vector_relational.hpp
app/src/main/include/glm/detail/: compute_common.hpp  func_common.inl  func_exponential.inl  func_geometric.inl  func_integer.inl  func_matrix.inl  func_packing.inl  func_trigonometric.inl  setup.hpp  type_float.hpp  type_mat2x2.inl  type_mat2x3.inl  type_mat2x4.inl  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.inl  type_mat4x2.inl  type_mat4x3.inl  type_mat4x4.inl  type_quat.hpp  type_quat.inl  type_vec1.inl  type_vec2.inl  type_vec3.inl  type_vec4.inl
app/src/main/include/glm/ext/: matrix_projection.inl  vector_common.hpp
app/src/main/include/glm/gtc/: noise.inl  packing.inl  quaternion.inl
app/src/main/include/glm/gtx/: scalar_multiplication.hpp
app/src/main/include/stb/: stb.h  stb_c_lexer.h  stb_connected_components.h  stb_divide.h  stb_ds.h  stb_dxt.h  stb_herringbone_wang_tile.h  stb_image.h  stb_image_resize.h  stb_image_write.h  stb_include.h  stb_leakcheck.h  stb_perlin.h  stb_rect_pack.h  stb_sprintf.h  stb_textedit.h  stb_tilemap_editor.h  stb_truetype.h  stb_vorbis.c  stb_voxel_render.h  stretchy_buffer.h
app/src/main/include/tinygltf/: json.hpp  stb_image.h  stb_image_write.h  tiny_gltf.h
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/shaders/: shader.frag  shader.vert
(+3 files in other folders)
